<resources>
    <string name="app_name">LAB4-TicTacToe</string>
    <string name="go_to_the_game_screen">Go to the Game Screen</string>
    <string name="tour_eiffel_paris">Tour Eiffel, Paris</string>
    <string name="todo">TODO</string>
    <string name="title_activity_game">GameActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_game_activityy">GameActivityy</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="player_1_0">Tom: 0</string>
    <string name="player_2_0">Jerry: 0</string>
    <string name="reset">reset</string>
</resources>