<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tictactoe.myapplication.GameActivityy">

    <TextView
        android:id="@+id/text_view_p1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_1_0"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_p2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_2_0"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/text_view_p1"
        app:layout_constraintTop_toBottomOf="@+id/text_view_p1" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="33dp"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button_00"
        android:layout_width="97dp"
        android:layout_height="133dp"
        android:textSize="60sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_01"
        app:layout_constraintEnd_toEndOf="@+id/button_10"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_01"
        android:layout_width="123dp"
        android:layout_height="131dp"
        android:layout_marginTop="1dp"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/button_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_p2" />

    <Button
        android:id="@+id/button_02"
        android:layout_width="111dp"
        android:layout_height="142dp"
        android:textSize="60sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button_12" />


    <Button
        android:id="@+id/button_10"
        android:layout_width="103dp"
        android:layout_height="113dp"
        android:textSize="60sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_11"
        app:layout_constraintEnd_toEndOf="@+id/button_20"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_11"
        android:layout_width="118dp"
        android:layout_height="116dp"
        android:layout_marginTop="59dp"
        android:layout_marginBottom="59dp"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/button_21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_01" />

    <Button
        android:id="@+id/button_12"
        android:layout_width="109dp"
        android:layout_height="123dp"
        android:textSize="60sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/button_22" />


    <Button
        android:id="@+id/button_20"
        android:layout_width="107dp"
        android:layout_height="112dp"
        android:textSize="60sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_21"
        app:layout_constraintEnd_toStartOf="@+id/button_21"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_21"
        android:layout_width="101dp"
        android:layout_height="112dp"
        android:layout_marginBottom="40dp"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_22"
        android:layout_width="93dp"
        android:layout_height="113dp"
        android:textSize="60sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_21" />

</androidx.constraintlayout.widget.ConstraintLayout>